<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>teamway</groupId>
	<artifactId>DBCore</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<dependencies>
		<dependency>
			<groupId>org.apache.thrift</groupId>
			<artifactId>libthrift</artifactId>
			<version>0.10.0</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.6.1</version>
		</dependency>
		<dependency>
			<groupId>com.mchange</groupId>
			<artifactId>c3p0</artifactId>
			<version>0.9.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/commons-dbutils/commons-dbutils -->
		<dependency>
			<groupId>commons-dbutils</groupId>
			<artifactId>commons-dbutils</artifactId>
			<version>1.3</version>

		</dependency>
		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.44</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>1.2.1</version>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>assemble</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<repositoryLayout>flat</repositoryLayout>
					<repositoryName>lib</repositoryName>
					<configurationSourceDirectory>src/main/resources/config</configurationSourceDirectory>
					<configurationSourceDirectory>src/main/java/</configurationSourceDirectory>
					<!-- Set the target configuration directory to be used in the bin scripts -->
					<configurationDirectory>config</configurationDirectory>

					<!-- Copy the contents from "/src/main/config" to the target configuration 
						directory in the assembled application -->
					<copyConfigurationDirectory>true</copyConfigurationDirectory>
					<!-- Include the target configuration directory in the beginning of 
						the classpath declaration in the bin scripts -->
					<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
					<!-- set alternative assemble directory -->
					<assembleDirectory>${project.build.directory}/DBCore</assembleDirectory>
					<!-- Extra JVM arguments that will be included in the bin scripts -->
					<extraJvmArguments>-Xms368m -Xmx368m -XX:PermSize=64m
						-XX:MaxPermSize=64m -XX:NewSize=64m -XX:MaxNewSize=256m
					</extraJvmArguments>
					<!-- Generate bin scripts for windows and unix pr default -->
					<binFileExtensions>
						<unix>.sh</unix>
					</binFileExtensions>
					<platforms>
						<platform>windows</platform>
						<platform>unix</platform>
					</platforms>
					<programs>
						<program>
							<mainClass>teamway.shenzhen.tms9000.dbClient</mainClass>
							<name>startup</name>
						</program>
					</programs>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>